# kdebugsettings

./: .craft.ini  .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Messages.sh  REUSE.toml  config-kdebugsettings.h.cmake  config-kdebugsettings.h.in  snapcraft.yaml
autotests/: CMakeLists.txt  categorytypecomboboxtest.cpp  categorytypecomboboxtest.h  categorywarningtest.cpp  categorywarningtest.h  changedebugmodejobtest.cpp  changedebugmodejobtest.h  configurecustomsettingdialogtest.cpp  configurecustomsettingdialogtest.h  configurecustomsettingwidgettest.cpp  configurecustomsettingwidgettest.h  customdebugsettingspagetest.cpp  customdebugsettingspagetest.h  environmentsettingsrulespagetest.cpp  environmentsettingsrulespagetest.h  groupmanagementdialogtest.cpp  groupmanagementdialogtest.h  groupmanagementwidgettest.cpp  groupmanagementwidgettest.h  kdeapplicationdebugsettingpagetest.cpp  kdeapplicationdebugsettingpagetest.h  kdeapplicationlistwidgettest.cpp  kdeapplicationlistwidgettest.h  kdeapplicationtreelistwidgettest.cpp  kdeapplicationtreelistwidgettest.h  kdebugsettingsdialogtest.cpp  kdebugsettingsdialogtest.h  kdebugsettingsloadingcategoriestest.cpp  kdebugsettingsloadingcategoriestest.h  kdebugsettingutiltest.cpp  kdebugsettingutiltest.h  loadcategoriesjobtest.cpp  loadcategoriesjobtest.h  loadgroupmenutest.cpp  loadgroupmenutest.h  loadtoolbuttontest.cpp  loadtoolbuttontest.h  loggingcategorytest.cpp  loggingcategorytest.h  renamecategorytest.cpp  (+5 more)
autotests/data/: correct.categories  duplicates.categories  duplicates.ini  oneelementall.ini  oneelementall.ref  oneelementcritical.ini  oneelementdebug.ini  oneelementdebugandanextract.ini  oneelementdebugandanextractfalse.ini  oneelementinfo.ref  oneelementinfobis.ini  oneelementonelineoff.ini  oneelementtwolinecritical.ini  testwithoutcategories.ini  testwithoutcategorieswarning.ini  tworename.renamecategories
src/: CMakeLists.txt  categorytypecombobox.cpp  categorytypecombobox.h  categorywarning.cpp  categorywarning.h  changedebugmodejob.cpp  changedebugmodejob.h  configurecustomsettingdialog.cpp  configurecustomsettingdialog.h  configurecustomsettingwidget.cpp  configurecustomsettingwidget.h  customdebuglistview.cpp  customdebuglistview.h  customdebugmodel.cpp  customdebugmodel.h  customdebugsettingspage.cpp  customdebugsettingspage.h  environmentplaintextedit.cpp  environmentplaintextedit.h  environmentsettingsrulespage.cpp  environmentsettingsrulespage.h  groupmanagementdialog.cpp  groupmanagementdialog.h  groupmanagementwidget.cpp  groupmanagementwidget.h  kdeapplicationdebugsettingpage.cpp  kdeapplicationdebugsettingpage.h  kdeapplicationlistwidget.cpp  kdeapplicationlistwidget.h  kdeapplicationtreelistwidget.cpp  kdeapplicationtreelistwidget.h  kdebugsettings_debug.cpp  kdebugsettings_debug.h  kdebugsettingsdialog.cpp  kdebugsettingsdialog.h  kdebugsettingsloadingcategories.cpp  kdebugsettingsloadingcategories.h  kdebugsettingsutil.cpp  kdebugsettingsutil.h  kdeloggingcategory.cpp  (+19 more)
src/apps/: CMakeLists.txt  main.cpp
src/apps/autotests/: CMakeLists.txt
src/core/: CMakeLists.txt  kdebugsettingscommandlineparser.cpp  kdebugsettingscommandlineparser.h  kdebugsettingsloadingcategories.cpp  kdebugsettingsloadingcategories.h  kdebugsettingsutil.cpp  kdebugsettingsutil.h  kdeloggingcategory.cpp  kdeloggingcategory.h  libkdebugsettingscore_private_export.h  loggingcategory.cpp  loggingcategory.h  loggingmanager.cpp  loggingmanager.h  renamecategory.cpp  renamecategory.h
src/core/autotests/: CMakeLists.txt  categorytypemodeltest.cpp  categorytypemodeltest.h  changedebugmodejobtest.cpp  changedebugmodejobtest.h  kdeapplicationloggingcategorymodeltest.cpp  kdeapplicationloggingcategorymodeltest.h  kdebugsettingscommandlineparsertest.cpp  kdebugsettingscommandlineparsertest.h  kdebugsettingsloadingcategoriestest.cpp  kdebugsettingsloadingcategoriestest.h  kdebugsettingutiltest.cpp  kdebugsettingutiltest.h  loadcategoriesjobtest.cpp  loadcategoriesjobtest.h  loggingcategorytest.cpp  loggingcategorytest.h  renamecategorytest.cpp  renamecategorytest.h  saverulesjobtest.cpp  saverulesjobtest.h
src/core/jobs/: changedebugmodejob.cpp  changedebugmodejob.h  loadcategoriesjob.cpp  loadcategoriesjob.h  saverulesjob.cpp  saverulesjob.h
src/core/model/: categorytypemodel.cpp  categorytypemodel.h  categorytypeproxymodel.cpp  categorytypeproxymodel.h  customdebugmodel.cpp  customdebugmodel.h  customdebugproxymodel.cpp  customdebugproxymodel.h  customloggingcategorymodel.cpp  customloggingcategorymodel.h  customloggingcategoryproxymodel.cpp  (+7 more)
src/data/: CMakeLists.txt  org.kde.kdebugsettings.appdata.xml  org.kde.kdebugsettings.desktop  org.kde.kdebugsettingsquick.appdata.xml  org.kde.kdebugsettingsquick.desktop
src/model/: customdebugmodel.cpp  customdebugmodel.h  customdebugproxymodel.h
src/quickapps/: CMakeLists.txt  main.cpp  resources.qrc
src/seleniumtests/: kdebugsettings.py
src/widgets/: CMakeLists.txt  categorytypecombobox.cpp  categorytypecombobox.h  categorywarning.cpp  categorywarning.h  configurecustomsettingdialog.cpp  configurecustomsettingdialog.h  configurecustomsettingwidget.cpp  configurecustomsettingwidget.h  customdebuglistview.cpp  customdebuglistview.h  customdebugsettingspage.cpp  customdebugsettingspage.h  environmentplaintextedit.cpp  environmentplaintextedit.h  environmentsettingsrulespage.cpp  environmentsettingsrulespage.h  groupmanagementdialog.cpp  groupmanagementdialog.h  groupmanagementwidget.cpp  groupmanagementwidget.h  kdeapplicationdebugsettingpage.cpp  kdeapplicationdebugsettingpage.h  kdeapplicationlistview.cpp  kdeapplicationlistview.h  kdeapplicationlistviewdelegate.cpp  kdeapplicationlistviewdelegate.h  kdeapplicationtreelistwidget.cpp  kdeapplicationtreeview.cpp  kdeapplicationtreeview.h  kdebugsettingsdialog.cpp  kdebugsettingsdialog.h  libkdebugsettings_private_export.h  loadgroupmenu.cpp  loadgroupmenu.h  loadtoolbutton.cpp  loadtoolbutton.h  savetoolbutton.cpp  savetoolbutton.h
(+127 files in other folders)
